--- a/src/core/ayaya-server/ayaya-server/ayaya-server.csproj
+++ b/src/core/ayaya-server/ayaya-server/ayaya-server.csproj
@@ -7,4 +7,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="ZeroMQ" Version="4.1.0.26" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="database\" />
+  </ItemGroup>
 </Project>
