fix(CI): deploy on travis errored
Some tweaks in the deploy script command

Issues: #6

--- a/.releaserc
+++ b/.releaserc
@@ -1,5 +1,5 @@
 {
-  "repositoryUrl": "https://github.com/texel-sensei/ayayaa",
+  "repositoryUrl": "https://github.com/texel-sensei/ayayaa.git",
   "verifyConditions": ["@semantic-release/github"],
   "prepare": [
     {
