--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: csharp
+
 solution: src/core/ayaya-server/ayaya-server.sln
 mono: none
 dotnet: 2.0.0
@@ -10,6 +11,4 @@ script:
 deploy:
     provider: script
     skip_cleanup: true
-    script:
-        - nvm install lts/*
-        - npx travis-deply-once "npx semantic-release"
+    script: bash deploy.sh
