chore(CI): Prevent building of tag pushes
Add an exclude list to travis.yml to prevent building of tags that are
pushed to git. The release by semantic-release did trigger a second
rebuild, that should be prevented by this.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ solution: src/core/ayaya-server/ayaya-server.sln
 mono: none
 dotnet: 2.0.0
 
+branches:
+    except:
+        - /v[0-9]+\.[0-9]+\.[0-9]+/
+
 script:
     - dotnet restore $TRAVIS_SOLUTION
     - dotnet test $TRAVIS_SOLUTION
