--- a/src/core/ayayaa-server/tests/tests.csproj
+++ b/src/core/ayayaa-server/tests/tests.csproj
@@ -10,6 +10,6 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ayaya-server\ayaya-server.csproj" />
+    <ProjectReference Include="..\ayayaa-server\ayayaa-server.csproj" />
   </ItemGroup>
 </Project>
