--- a/src/core/ayayaa-server/ayayaa-server/ayayaa-server.csproj
+++ b/src/core/ayayaa-server/ayayaa-server/ayayaa-server.csproj
@@ -2,12 +2,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>ayayaa</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="ZeroMQ" Version="4.1.0.26" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="database\" />
   </ItemGroup>
 </Project>
