refactor(API): Replace ZeroMQ with an HTTP API
Instead of ZeroMQ the server now hosts an webserver via Nancy for
listening to requests.

BREAKING CHANGE:
    - New protocol, use HTTP Post for sending images instead of ZeroMQ.
      Payload is still in the same JSON format.

Issues: Closes #3

--- a/src/core/ayayaa-server/ayayaa-server/ayayaa-server.csproj
+++ b/src/core/ayayaa-server/ayayaa-server/ayayaa-server.csproj
@@ -5,7 +5,8 @@
     <RootNamespace>ayayaa</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Nancy" Version="2.0.0-pre1911" />
+    <PackageReference Include="Nancy.Hosting.Self" Version="2.0.0-pre1911" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
-    <PackageReference Include="ZeroMQ" Version="4.1.0.26" />
   </ItemGroup>
 </Project>
