--- a/src/core/ayayaa-server/tests/tests.csproj
+++ b/src/core/ayayaa-server/tests/tests.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="Nancy" Version="2.0.0-pre1911" />
+    <PackageReference Include="Nancy.Hosting.Self" Version="2.0.0-pre1911" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
