feat: Add first version of the logging system
This intial version of the logging only contains logging to Console. However the groundwork for any number of additional loggers has been set. In addition I've added integration tests for the console logger.

--- a/src/core/ayayaa-server/tests/tests.csproj
+++ b/src/core/ayayaa-server/tests/tests.csproj
@@ -12,6 +12,7 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ayayaa-logging\ayayaa-logging.csproj" />
     <ProjectReference Include="..\ayayaa-server\ayayaa-server.csproj" />
   </ItemGroup>
 </Project>
