--- a/src/core/ayayaa-server/ayayaa-logging/ayayaa-logging.csproj
+++ b/src/core/ayayaa-server/ayayaa-logging/ayayaa-logging.csproj
@@ -2,12 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <RootNamespace>ayayaa_logging</RootNamespace>
+    <RootNamespace>ayayaa.logging</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="Interfaces\" />
-    <Folder Include="Writers\" />
   </ItemGroup>
 
 </Project>
