--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# we need no files starting with '.'
+.*
+
 # Keep some dotfiles
 !.releaserc
 !.travis.yml
@@ -9,6 +12,8 @@
 __pycache__/
 *.py[cod]
 *$py.class
+bin/
+obj/
 
 # C extensions
 *.so
