--- a/ayayaa-server/tests/tests.csproj
+++ b/ayayaa-server/tests/tests.csproj
@@ -12,6 +12,6 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ayayaa-server\ayayaa-server.csproj" />
+    <ProjectReference Include="..\server\server.csproj" />
   </ItemGroup>
 </Project>
