feat(config): Add Support for reading ini files
A very simple config source that reads an *.ini file to provide config
values.

--- a/ayayaa-server/core/core.csproj
+++ b/ayayaa-server/core/core.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>ayayaa.core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ini-parser" Version="2.5.2" />
+  </ItemGroup>
+
 </Project>
